[gd_scene load_steps=10 format=2]

[ext_resource path="res://card/textures/foreground_frame.png" type="Texture2D" id=1]
[ext_resource path="res://card/textures/cost_frame.png" type="Texture2D" id=2]
[ext_resource path="res://card/textures/name_frame.png" type="Texture2D" id=3]
[ext_resource path="res://card/textures/rarity_frame.png" type="Texture2D" id=4]
[ext_resource path="res://card/textures/description_frame.png" type="Texture2D" id=5]
[ext_resource path="res://card/textures/background_frame.png" type="Texture2D" id=6]
[ext_resource path="res://game_ui/reward_area/reward_area.tres" type="Resource" id=7]
[ext_resource path="res://game_ui/reward_area/reward_card/reward_card.gd" type="Script" id=8]
[ext_resource path="res://resources/cards/tower/tower_card.tres" type="Resource" id=9]

[node name="RewardCard" type="Control"]
anchor_right = 0.110937
anchor_bottom = 0.274074
offset_right = 1.0
custom_minimum_size = Vector2( 214, 296 )
script = ExtResource( 8 )
reward_area_resource = ExtResource( 7 )
card_resource = ExtResource( 9 )

[node name="BackgroundFrame" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource( 6 )

[node name="ForegroundFrame" type="TextureRect" parent="."]
offset_left = 32.0
offset_top = -48.0
offset_right = 180.0
offset_bottom = 153.0
texture = ExtResource( 1 )

[node name="NameFrame" type="TextureRect" parent="."]
offset_left = 32.0
offset_top = 128.0
offset_right = 183.0
offset_bottom = 168.0
texture = ExtResource( 3 )

[node name="NameLabel" type="RichTextLabel" parent="NameFrame"]
modulate = Color( 0, 0, 0, 1 )
offset_left = 8.0
offset_top = 6.0
offset_right = 143.0
offset_bottom = 20.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]ciao[/center]"
text = "ciao"
fit_content_height = true
scroll_active = false

[node name="DescriptionFrame" type="TextureRect" parent="."]
offset_left = 8.0
offset_top = 163.0
offset_right = 204.0
offset_bottom = 289.0
texture = ExtResource( 5 )

[node name="DescriptionLabel" type="RichTextLabel" parent="DescriptionFrame"]
modulate = Color( 0, 0, 0, 1 )
offset_left = 17.0
offset_top = 18.0
offset_right = 179.0
offset_bottom = 107.0
mouse_filter = 2
bbcode_enabled = true

[node name="CostFrame" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -24.0
offset_right = 40.0
offset_bottom = 41.0
texture = ExtResource( 2 )

[node name="CostLabel" type="RichTextLabel" parent="CostFrame"]
modulate = Color( 0, 0, 0, 1 )
offset_left = 23.0
offset_top = 27.0
offset_right = 71.0
offset_bottom = 57.0
mouse_filter = 2
bbcode_enabled = true
text = "5
"
text = "5
"
fit_content_height = true
scroll_active = false

[node name="RarityFrame" type="TextureRect" parent="."]
offset_left = 96.0
offset_top = 144.0
offset_right = 136.0
offset_bottom = 184.0
texture = ExtResource( 4 )

[connection signal="gui_input" from="." to="." method="_on_RewardCard_gui_input"]
